--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
     </center>
     <hr>
     <div class="container">
-        <h1>How to access gallery of mo</h1>
+        <h1>How to access gallery of the mobile even if it is protected</h1>
+        <div class="steps">
+            <h4> > Open Google Chrome</h4>
+            <h4> > Type <b>File:///sdcard/</b></h4>
+            <h4> > Phone doesn't require <b>SDcard</b></h4>
+            <h4> > It will give access to all the folders.</h4>
+            <h4> > It will show you all the folders of photos and videos even if the gallery is locked</h4>
+        </div>
     </div>
 </body>
 </html>
