--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h4> > Phone doesn't require <b>SDcard</b></h4>
             <h4> > It will give access to all the folders.</h4>
             <h4> > It will show you all the folders of photos and videos even if the gallery is locked</h4>
+            <h4>Thank You</h4>
         </div>
     </div>
 </body>
